# iron-example-server

./: Cargo.toml  README.md
migrations/2017-09-18-130103_create_employee/: down.sql  up.sql
migrations/2017-09-19-044610_create_department/: up.sql
src/: lib.rs  main.rs
src/middlewares/: connection_pool.rs  login.rs  mod.rs
src/models/: department.rs  employee.rs  mod.rs
