[package]
name = "iron-example-server"
version = "0.1.0"
authors = ["letusfly85 <letusfly95@gmail.com>"]

[dependencies]
persistent = "0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0"

[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
