[package]
name = "iron-example-server"
version = "0.1.0"
authors = ["letusfly85 <letusfly95@gmail.com>"]

[dependencies]
persistent = "0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0"
router = "*"
diesel = { version = "0.16.0", features = ["mysql"] }
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"
dotenv = "0.8.0"
jsonwebtoken = "3"
slog = "~2.0.12"
slog-term = "~2.2.0"
slog-json = "~2.0.0"

[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
